@@ -41,7 +41,6 @@ import org.ethereum.vm.PrecompiledContracts;
 
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /**
  * Responsible for logging events triggered by BridgeContract.
@@ -50,7 +49,7 @@ import java.util.stream.Collectors;
  */
 public class BridgeEventLoggerImpl implements BridgeEventLogger {
 
-    private static final byte[] BRIDGE_CONTRACT_ADDRESS = PrecompiledContracts.BRIDGE_ADDR.getBytes();
+    private static final byte[] BRIDGE_CONTRACT_ADDRESS_SERIALIZED = PrecompiledContracts.BRIDGE_ADDR.getBytes();
 
     private final BridgeConstants bridgeConstants;
     private final SignatureCache signatureCache;
@@ -67,17 +66,21 @@ public class BridgeEventLoggerImpl implements BridgeEventLogger {
     @Override
     public void logUpdateCollections(Transaction rskTx) {
         CallTransaction.Function event = BridgeEvents.UPDATE_COLLECTIONS.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics();
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
-        byte[] encodedData = event.encodeEventData(rskTx.getSender(signatureCache).toString());
 
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics();
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
+
+        String rskTxSenderAddress = rskTx.getSender(signatureCache).toString();
+        byte[] encodedData = event.encodeEventData(rskTxSenderAddress);
+
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
     public void logAddSignature(FederationMember federationMember, BtcTransaction btcTx, byte[] rskTxHash) {
         ECKey federatorPublicKey = getFederatorPublicKey(federationMember);
         String federatorRskAddress = ByteUtil.toHexString(federatorPublicKey.getAddress());
+
         logAddSignatureInSolidityFormat(rskTxHash, federatorRskAddress, federationMember.getBtcPublicKey());
     }
 
@@ -95,37 +98,45 @@ public class BridgeEventLoggerImpl implements BridgeEventLogger {
 
     private void logAddSignatureInSolidityFormat(byte[] rskTxHash, String federatorRskAddress, BtcECKey federatorPublicKey) {
         CallTransaction.Function event = BridgeEvents.ADD_SIGNATURE.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(rskTxHash, federatorRskAddress);
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
-        byte[] encodedData = event.encodeEventData(federatorPublicKey.getPubKey());
 
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(rskTxHash, federatorRskAddress);
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
+
+        byte[] federatorPublicKeySerialized = federatorPublicKey.getPubKey();
+        byte[] encodedData = event.encodeEventData(federatorPublicKeySerialized);
+
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
     public void logReleaseBtc(BtcTransaction btcTx, byte[] rskTxHash) {
         CallTransaction.Function event = BridgeEvents.RELEASE_BTC.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(rskTxHash);
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
-        byte[] encodedData = event.encodeEventData(btcTx.bitcoinSerialize());
 
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(rskTxHash);
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
+
+        byte[] rawBtcTxSerialized = btcTx.bitcoinSerialize();
+        byte[] encodedData = event.encodeEventData(rawBtcTxSerialized);
+
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
     public void logCommitFederation(Block executionBlock, Federation oldFederation, Federation newFederation) {
+        CallTransaction.Function event = BridgeEvents.COMMIT_FEDERATION.getEvent();
+
         // Convert old federation public keys in bytes array
         byte[] oldFederationFlatPubKeys = flatKeysAsByteArray(oldFederation.getBtcPublicKeys());
         String oldFederationBtcAddress = oldFederation.getAddress().toBase58();
+
         byte[] newFederationFlatPubKeys = flatKeysAsByteArray(newFederation.getBtcPublicKeys());
         String newFederationBtcAddress = newFederation.getAddress().toBase58();
 
         FederationConstants federationConstants = bridgeConstants.getFederationConstants();
         long newFedActivationBlockNumber = executionBlock.getNumber() + federationConstants.getFederationActivationAge(activations);
 
-        CallTransaction.Function event = BridgeEvents.COMMIT_FEDERATION.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics();
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics();
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
 
         byte[] encodedData = event.encodeEventData(
             oldFederationFlatPubKeys,
@@ -135,61 +146,75 @@ public class BridgeEventLoggerImpl implements BridgeEventLogger {
             newFedActivationBlockNumber
         );
 
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
     public void logLockBtc(RskAddress receiver, BtcTransaction btcTx, Address senderBtcAddress, Coin amount) {
         CallTransaction.Function event = BridgeEvents.LOCK_BTC.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(receiver.toString());
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
 
-        byte[] encodedData = event.encodeEventData(btcTx.getHash().getBytes(), senderBtcAddress.toString(), amount.getValue());
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(receiver.toString());
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
 
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+        byte[] btcTxHashSerialized = btcTx.getHash().getBytes();
+        byte[] encodedData = event.encodeEventData(
+            btcTxHashSerialized,
+            senderBtcAddress.toString(),
+            amount.getValue()
+        );
+
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
     public void logPeginBtc(RskAddress receiver, BtcTransaction btcTx, Coin amount, int protocolVersion) {
         CallTransaction.Function event = BridgeEvents.PEGIN_BTC.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(receiver.toString(), btcTx.getHash().getBytes());
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
+
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(receiver.toString(), btcTx.getHash().getBytes());
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
 
         byte[] encodedData = event.encodeEventData(amount.getValue(), protocolVersion);
 
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
     public void logReleaseBtcRequested(byte[] rskTransactionHash, BtcTransaction btcTx, Coin amount) {
         CallTransaction.Function event = BridgeEvents.RELEASE_REQUESTED.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(rskTransactionHash, btcTx.getHash().getBytes());
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
+
+        byte[] btcTxHashSerialized = btcTx.getHash().getBytes();
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(rskTransactionHash, btcTxHashSerialized);
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
+
         byte[] encodedData = event.encodeEventData(amount.getValue());
 
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
     public void logRejectedPegin(BtcTransaction btcTx, RejectedPeginReason reason) {
         CallTransaction.Function event = BridgeEvents.REJECTED_PEGIN.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(btcTx.getHash().getBytes());
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
+
+        byte[] btcTxHashSerialized = btcTx.getHash().getBytes();
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(btcTxHashSerialized);
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
 
         byte[] encodedData = event.encodeEventData(reason.getValue());
 
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
     public void logUnrefundablePegin(BtcTransaction btcTx, UnrefundablePeginReason reason) {
         CallTransaction.Function event = BridgeEvents.UNREFUNDABLE_PEGIN.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(btcTx.getHash().getBytes());
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
+
+        byte[] btcTxHashSerialized = btcTx.getHash().getBytes();
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(btcTxHashSerialized);
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
 
         byte[] encodedData = event.encodeEventData(reason.getValue());
 
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
@@ -203,50 +228,63 @@ public class BridgeEventLoggerImpl implements BridgeEventLogger {
 
     private void logReleaseBtcRequestReceived(String sender, byte[] btcDestinationAddress, Coin amount) {
         CallTransaction.Function event = BridgeEvents.RELEASE_REQUEST_RECEIVED_LEGACY.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(sender);
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
+
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(sender);
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
+
         byte[] encodedData = event.encodeEventData(btcDestinationAddress, amount.getValue());
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+
+        addLog(encodedTopics, encodedData);
     }
 
     private void logReleaseBtcRequestReceived(String sender, String btcDestinationAddress, Coin amount) {
         CallTransaction.Function event = BridgeEvents.RELEASE_REQUEST_RECEIVED.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(sender);
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
+
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(sender);
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
+
         byte[] encodedData = event.encodeEventData(btcDestinationAddress, amount.getValue());
 
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
     public void logReleaseBtcRequestRejected(String sender, Coin amount, RejectedPegoutReason reason) {
         CallTransaction.Function event = BridgeEvents.RELEASE_REQUEST_REJECTED.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(sender);
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
+
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(sender);
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
+
         byte[] encodedData = event.encodeEventData(amount.getValue(), reason.getValue());
 
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
     public void logBatchPegoutCreated(Sha256Hash btcTxHash, List<Keccak256> rskTxHashes) {
         CallTransaction.Function event = BridgeEvents.BATCH_PEGOUT_CREATED.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(btcTxHash.getBytes());
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
+
+        byte[] btcTxHashSerialized = btcTxHash.getBytes();
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(btcTxHashSerialized);
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
 
         byte[] serializedRskTxHashes = serializeRskTxHashes(rskTxHashes);
         byte[] encodedData = event.encodeEventData(serializedRskTxHashes);
 
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
     public void logPegoutConfirmed(Sha256Hash btcTxHash, long pegoutCreationRskBlockNumber) {
         CallTransaction.Function event = BridgeEvents.PEGOUT_CONFIRMED.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(btcTxHash.getBytes());
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
+
+        byte[] btcTxHashSerialized = btcTxHash.getBytes();
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(btcTxHashSerialized);
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
+
         byte[] encodedData = event.encodeEventData(pegoutCreationRskBlockNumber);
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
@@ -256,18 +294,21 @@ public class BridgeEventLoggerImpl implements BridgeEventLogger {
         }
 
         CallTransaction.Function event = BridgeEvents.PEGOUT_TRANSACTION_CREATED.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(btcTxHash.getBytes());
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
+
+        byte[] btcTxHashSerialized = btcTxHash.getBytes();
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(btcTxHashSerialized);
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
 
         byte[] serializedOutpointValues = UtxoUtils.encodeOutpointValues(outpointValues);
         byte[] encodedData = event.encodeEventData(serializedOutpointValues);
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+
+        addLog(encodedTopics, encodedData);
     }
 
     private byte[] flatKeys(List<BtcECKey> keys, Function<BtcECKey, byte[]> parser) {
         List<byte[]> pubKeys = keys.stream()
                 .map(parser)
-                .collect(Collectors.toList());
+                .toList();
         int pubKeysLength = pubKeys.stream().mapToInt(key -> key.length).sum();
 
         byte[] flatPubKeys = new byte[pubKeysLength];
@@ -287,7 +328,7 @@ public class BridgeEventLoggerImpl implements BridgeEventLogger {
     private byte[] serializeRskTxHashes(List<Keccak256> rskTxHashes) {
         List<byte[]> rskTxHashesList = rskTxHashes.stream()
             .map(Keccak256::getBytes)
-            .collect(Collectors.toList());
+            .toList();
         int rskTxHashesLength = rskTxHashesList.stream().mapToInt(key -> key.length).sum();
 
         byte[] serializedRskTxHashes = new byte[rskTxHashesLength];
@@ -298,5 +339,14 @@ public class BridgeEventLoggerImpl implements BridgeEventLogger {
         }
 
         return serializedRskTxHashes;
+    }
+
+    private List<DataWord> getEncodedTopics(byte[][] encodedTopicsSerialized) {
+        return LogInfo.byteArrayToList(encodedTopicsSerialized);
+    }
+
+    private void addLog(List<DataWord> eventEncodedTopics, byte[] eventEncodedData) {
+        LogInfo newLog = new LogInfo(BRIDGE_CONTRACT_ADDRESS_SERIALIZED, eventEncodedTopics, eventEncodedData);
+        this.logs.add(newLog);
     }
 }
